# TemporaryPerson

./: CMakeLists.txt  README.md  click.cpp  click.h  click.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
